--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+    <!--Title-->
     <div class="title">
         <h1>Train Systems</h1>
     </div>
+    <!--Navigation Bar: Train Systems-->
     <nav>
         <ul>
             <li><a href="index.html" id="active">Train Systems</a></li>
@@ -20,13 +22,17 @@
             <li><a href="solve.html">Solutions</a></li>
         </ul>
     </nav>
+    <!--Image of large type subway map-->
     <div>
-        <img src="Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
+        <img src="/Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
     </div>
+    <!--Information section one-->
     <div class="info">
+        <!--Information section one heading: Facts-->
         <div class="heading">
             <p>Facts</p>
         </div>
+        <!--Information section one content-->
         <div class="item">
             <p>The New York City Transit is the largest and most active subway system in North America.</p>
             <p>The New York City Transit is maintained by the Metropolitan Transportation Authority (MTA).</p>
@@ -34,10 +40,13 @@
             <p>Commuters can use a MetroCard or OMNY, the MTA's contactless fare payment system, to pay the subway fare.</p>
         </div>
     </div>
+    <!--Information section two-->
     <div class="info">
+        <!--Information section two heading: Problems-->
         <div class="heading">
             <p>Problems</p>
         </div>
+        <!--Information section two content-->
         <div class="item">
             <p>The Metropolitan Transportation Authority (MTA) uses 12-9s to describe collisions between trains and commuters. 
             The experience can be traumatizing for train operators and a large number of 12-9s are actually suicides or accidents.</p>
@@ -45,35 +54,45 @@
             Other crimes include felony crimes.</p>
         </div>
     </div>
+    <!--Information section three-->
     <div class="info">
+        <!--Information section three heading: Trains-->
         <div class="heading">
             <p>Trains</p>
         </div>
+        <!--Information section three content-->
         <div class="item">
             <table>
                 <tr>
+                    <!--Image of M train-->
                     <th>M Train</th>
-                    <td><img src="Train_Systems/images/M_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems/images/M_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
+                    <!--Image of E train-->
                     <th>E Train</th>
-                    <td><img src="Train_Systems/images/E_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems/images/E_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
+                    <!--Image of 7 train-->
                     <th>7 Train</th>
-                    <td><img src="Train_Systems/images/7_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems/images/7_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
+                    <!--Image of G train-->
                     <th>G Train</th>
-                    <td><img src="Train_Systems/images/G_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems/images/G_Train.png" alt="Trains"></td>
                 </tr>
             </table>
         </div>
     </div>
+    <!--Information section four-->
     <div class="info">
+        <!--Information section four heading: Form-->
         <div class="heading">
             <p>Form</p>
         </div>
+        <!--Travel time form-->
         <div class="item">
             <form>
                 <label for="time">What is your average travel time using the New York City Subway?</label>
@@ -82,11 +101,13 @@
             </form>
         </div>
     </div>
+    <!--Music-->
     <div>
         <audio controls autoplay loop>
-            <source src="Train_Systems/audio/4-04 Fruity Factory.mp3" type="audio/mpeg">
+            <source src="/Train_Systems/audio/4-04 Fruity Factory.mp3" type="audio/mpeg">
         </audio>
     </div>
+    <!--Footer: Copyright-->
     <footer>
         <p>COPYRIGHT © CHENG HAN HSIEH 2022. ALL RIGHTS RESERVED.</p>
     </footer>
