--- a/code.html
+++ b/code.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+    <!--Title-->
     <div class="title">
         <h1>Code 12-9</h1>
     </div>
+    <!--Navigation Bar: Code 12-9-->
     <nav>
         <ul>
             <li><a href="index.html">Train Systems</a></li>
@@ -20,23 +22,29 @@
             <li><a href="solve.html">Solutions</a></li>
         </ul>
     </nav>
+    <!--Image of large type subway map-->
     <div>
-        <img src="Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
+        <img src="/Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
     </div>
+    <!--Information section one-->
     <div class="info">
+        <!--Information section one heading: What is Code 12-9?-->
         <div class="heading">
             <p>What is Code 12-9?</p>
         </div>
+        <!--Information section one content-->
         <div class="item">
             <p>The Metropolitan Transportation Authority (MTA) uses 12-9s to describe collisions between trains and commuters. 
             The experience can be traumatizing for train operators and a large number of 12-9s are actually suicides or accidents.</p>
         </div>
     </div>
+    <!--Music-->
     <div>
         <audio controls autoplay loop>
-            <source src="Train_Systems/audio/4-07 Frosty Fruits [In a Snow-Bound Land Returns].mp3" type="audio/mpeg">
+            <source src="/Train_Systems/audio/4-07 Frosty Fruits [In a Snow-Bound Land Returns].mp3" type="audio/mpeg">
         </audio>
     </div>
+    <!--Footer: Copyright-->
     <footer>
         <p>COPYRIGHT © CHENG HAN HSIEH 2022. ALL RIGHTS RESERVED.</p>
     </footer>
