--- a/safe.html
+++ b/safe.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+    <!--Title-->
     <div class="title">
         <h1>Transit Safety</h1>
     </div>
+    <!--Navigation Bar: Transit Safety-->
     <nav>
         <ul>
             <li><a href="index.html">Train Systems</a></li>
@@ -20,23 +22,29 @@
             <li><a href="solve.html">Solutions</a></li>
         </ul>
     </nav>
+    <!--Image of large type subway map-->
     <div>
-        <img src="Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
+        <img src="/Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
     </div>
+    <!--Information section one-->
     <div class="info">
+        <!--Information section one heading: Violent Transit Crimes-->
         <div class="heading">
             <p>Violent Transit Crime</p>
         </div>
+        <!--Information section one content-->
         <div class="item">
             <p>Subway safety is an election issue for the year 2022. Violent crimes include shootings, stabbings, and shoving people onto the tracks.
             Other crimes include felony crimes.</p>
         </div>
     </div>
+    <!--Music-->
     <div>
         <audio controls autoplay loop>
-            <source src="Train_Systems/audio/039. Try Again Tomorrow.mp3" type="audio/mpeg">
+            <source src="/Train_Systems/audio/039. Try Again Tomorrow.mp3" type="audio/mpeg">
         </audio>
     </div>
+    <!--Footer: Copyright-->
     <footer>
         <p>COPYRIGHT © CHENG HAN HSIEH 2022. ALL RIGHTS RESERVED.</p>
     </footer>
