--- a/solve.html
+++ b/solve.html
@@ -9,47 +9,80 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+    <!--Title-->
     <div class="title">
-        <h1>Solutions</h1>
+        <h1>Solution</h1>
     </div>
+    <!--Navigation Bar: Solution-->
     <nav>
         <ul>
             <li><a href="index.html">Train Systems</a></li>
             <li><a href="code.html">Code 12-9</a></li>
             <li><a href="safe.html">Transit Safety</a></li>
-            <li><a href="solve.html" id="active">Solutions</a></li>
+            <li><a href="solve.html" id="active">Solution</a></li>
         </ul>
     </nav>
+    <!--Images of platform screen doors-->
     <div>
         <img src="Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
     </div>
+    <!--Information section one-->
     <div class="info">
+        <!--Information section one heading: Solution-->
         <div class="heading">
             <p>Solutions</p>
         </div>
+        <!--Information section one content-->
         <div class="item">
-            <p>The New York City Transit is the largest and most active subway system in North America.</p>
-            <p>The New York City Transit is maintained by the Metropolitan Transportation Authority (MTA).</p>
-            <p>The standard subway fare is $2.75.</p>
-            <p>Commuters can use a MetroCard or OMNY, the MTA's contactless fare payment system, to pay the subway fare.</p>
+            <p>The danger extends beyond deliberate acts of violence; injuries and deaths also occur when people try to pick up items that have fallen 
+            on the tracks, get caught and dragged by a moving train, or descend to the tracks to help other individuals.</p>
+            <p>Platform screen doors in stations are one way the Metropolitan Transportation Authority (MTA) could provide a safer environment 
+            for transit users. The MTA has recently announced a pilot of platform screen doors in three stations.</p>
+            <p>Platform screen doors are automatic doors installed between the rails and platforms so that there is limited to no access to the rail.</p>
         </div>
     </div>
+    <!--Information section two-->
     <div class="info">
+        <!--Information section two heading: Platform Screen Doors-->
         <div class="heading">
             <p>Platform Screen Doors</p>
         </div>
+        <!--Information section two content-->
         <div class="item">
-            <p>The Metropolitan Transportation Authority (MTA) uses 12-9s to describe collisions between trains and commuters. 
-            The experience can be traumatizing for train operators and a large number of 12-9s are actually suicides or accidents.</p>
-            <p>Subway safety is an election issue for the year 2022. Violent crimes include shootings, stabbings, and shoving people onto the tracks.
-            Other crimes include felony crimes.</p>
+            <ul>
+                <li>Platform Screen Doors (PSD) are full-height automatic doors that are fully-fitted to the ceiling. They protect riders from piston
+                effects (Rapid winds that occur when the train is approaching).</li>
+                <li>Platform Edge Doors (PED) are like PSDs, but do not reach all the way to the ceiling.</li>
+                <li>Automatic Platform Gates (APGs) are shorter than PEDs and are half-height.</li>
+                <li>Rope Platform Screen Doors (RPSDs) are a newer type of screen door that slide open vertically. Some operate like garage doors, allowing 
+                more flexibility in stopping points for the train.</li>
+            </ul>
         </div>
     </div>
+    <!--Information section three-->
+    <div class="info">
+        <!--Information section three heading: More Information-->
+        <div class="heading">
+            <p>More Information</p>
+        </div>
+        <!--Information section three content-->
+        <div class="item">
+            <p>Restricting access to the tracks with these technologies has numerous benefits.</p>
+            <p>It reduces the number of injuries, suicides, and homicides cases, prevents traumas that conductors and bystanders would otherwise endure, and 
+            reduces delays caused by these unfortunate incidents.</p>
+            <p>It prevents accidents, especially for people with mobility issues and visually impaired people. Some barrier types help with the cleanliness of 
+            the station, as less dust enters the platform and less litter makes it to the tracks, reducing fire hazard. They may prevent gusts felt by passengers 
+            when the trains approach the station.</p>
+            <p>The real estate on these doors can offer a financial benefit through the placement of advertising, or assist with wayfinding.</p>
+        </div>
+    </div>
+    <!--Music-->
     <div>
         <audio controls autoplay loop>
             <source src="Train_Systems/audio/044. Winter Horns.mp3" type="audio/mpeg">
         </audio>
     </div>
+    <!--Footer: Copyright-->
     <footer>
         <p>COPYRIGHT © CHENG HAN HSIEH 2022. ALL RIGHTS RESERVED.</p>
     </footer>
@@ -60,4 +93,4 @@
 <!--12-9: https://www.newyorker.com/culture/the-new-yorker-documentary/new-yorks-train-operators-face-life-after-a-collision-in-after-the-12-9-->
 <!--Subway Safety: https://www.nytimes.com/2022/11/04/nyregion/new-york-subway-safety.html-->
 <!--Police Combat Crime: https://www.nytimes.com/2022/10/22/nyregion/nyc-subway-police-combat-crime.html-->
-<!--Protective Platform Doors: https://gothamist.com/news/mta-will-pilot-protective-platform-doors-3-subway-stations-->
+<!--Protective Platform Doors: https://www.samschwartz.com/staff-reflections/2022/3/31/advance-screening-platform-screen-doors-on-the-nyc-subway-->
