--- a/solve.html
+++ b/solve.html
@@ -24,7 +24,10 @@
     </nav>
     <!--Images of platform screen doors-->
     <div>
-        <img src="Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
+        <img src="/Train_Systems/images/Platform_Screen_Doors_Barcelona.png" alt="Platform Screen Doors">
+        <img src="/Train_Systems/images/Platform_Screen_Doors_Daegu.png" alt="Platform Screen Doors">
+        <img src="/Train_Systems/images/Platform_Screen_Doors_Delhi.png" alt="Platform Screen Doors">
+        <img src="/Train_Systems/images/Platform_Screen_Doors_Seoul.png" alt="Platform Screen Doors">
     </div>
     <!--Information section one-->
     <div class="info">
@@ -79,7 +82,7 @@
     <!--Music-->
     <div>
         <audio controls autoplay loop>
-            <source src="Train_Systems/audio/044. Winter Horns.mp3" type="audio/mpeg">
+            <source src="/Train_Systems/audio/044. Winter Horns.mp3" type="audio/mpeg">
         </audio>
     </div>
     <!--Footer: Copyright-->
