--- a/solve.html
+++ b/solve.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <!--Images of platform screen doors-->
-    <div>
+    <div id="gallery">
         <img src="/Train_Systems/images/Platform_Screen_Doors_Barcelona.jpg" alt="Platform Screen Doors">
         <img src="/Train_Systems/images/Platform_Screen_Doors_Daegu.jpg" alt="Platform Screen Doors">
         <img src="/Train_Systems/images/Platform_Screen_Doors_Delhi.jpg" alt="Platform Screen Doors">
