--- a/solve.html
+++ b/solve.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <!--Images of platform screen doors-->
-    <div id="gallery">
+    <div class="gallery">
         <img src="/Train_Systems/images/Platform_Screen_Doors_Barcelona.jpg" alt="Platform Screen Doors">
         <img src="/Train_Systems/images/Platform_Screen_Doors_Daegu.jpg" alt="Platform Screen Doors">
         <img src="/Train_Systems/images/Platform_Screen_Doors_Delhi.jpg" alt="Platform Screen Doors">
@@ -52,14 +52,12 @@
         </div>
         <!--Information section two content-->
         <div class="item">
-            <ul>
-                <li>Platform Screen Doors (PSD) are full-height automatic doors that are fully-fitted to the ceiling. They protect riders from piston
-                effects (Rapid winds that occur when the train is approaching).</li>
-                <li>Platform Edge Doors (PED) are like PSDs, but do not reach all the way to the ceiling.</li>
-                <li>Automatic Platform Gates (APGs) are shorter than PEDs and are half-height.</li>
-                <li>Rope Platform Screen Doors (RPSDs) are a newer type of screen door that slide open vertically. Some operate like garage doors, allowing 
-                more flexibility in stopping points for the train.</li>
-            </ul>
+            <p>Platform Screen Doors (PSD) are full-height automatic doors that are fully-fitted to the ceiling. They protect riders from piston
+            effects (Rapid winds that occur when the train is approaching).</p>
+            <p>Platform Edge Doors (PED) are like PSDs, but do not reach all the way to the ceiling.</p>
+            <p>Automatic Platform Gates (APGs) are shorter than PEDs and are half-height.</p>
+            <p>Rope Platform Screen Doors (RPSDs) are a newer type of screen door that slide open vertically. Some operate like garage doors, allowing 
+            more flexibility in stopping points for the train.</p>
         </div>
     </div>
     <!--Information section three-->
