--- a/solve.html
+++ b/solve.html
@@ -24,10 +24,10 @@
     </nav>
     <!--Images of platform screen doors-->
     <div class="gallery">
-        <div><img src="/Train_Systems/images/Platform_Screen_Doors_Barcelona.jpg" alt="Platform Screen Doors"></div>
-        <div><img src="/Train_Systems/images/Platform_Screen_Doors_Daegu.jpg" alt="Platform Screen Doors"></div>
-        <div><img src="/Train_Systems/images/Platform_Screen_Doors_Delhi.jpg" alt="Platform Screen Doors"></div>
-        <div><img src="/Train_Systems/images/Platform_Screen_Doors_Seoul.jpg" alt="Platform Screen Doors"></div>
+        <div><img src="/Train_Systems/images/Platform_Screen_Doors_Barcelona.jpg" alt="Platform Screen Doors" id="platform"></div>
+        <div><img src="/Train_Systems/images/Platform_Screen_Doors_Daegu.jpg" alt="Platform Screen Doors" id="platform"></div>
+        <div><img src="/Train_Systems/images/Platform_Screen_Doors_Delhi.jpg" alt="Platform Screen Doors" id="platform"></div>
+        <div><img src="/Train_Systems/images/Platform_Screen_Doors_Seoul.jpg" alt="Platform Screen Doors" id="platform"></div>
     </div>
     <!--Information section one-->
     <div class="info">
