--- a/solve.html
+++ b/solve.html
@@ -22,35 +22,38 @@
             <li><a href="solve.html" id="active">Solution</a></li>
         </ul>
     </nav>
-    <!--Information section one-->
-    <div class="info">
-        <!--Information section one heading: Solution-->
-        <div class="heading">
-            <p>Solutions</p>
+    <!--Section-->
+    <div class="section">
+        <!--Information section one-->
+        <div class="info">
+            <!--Information section one heading: Solution-->
+            <div class="heading">
+                <p>Solutions</p>
+            </div>
+            <!--Information section one content-->
+            <div class="item">
+                <p>The danger extends beyond deliberate acts of violence; injuries and deaths also occur when people try to pick up items that have fallen 
+                on the tracks, get caught and dragged by a moving train, or descend to the tracks to help other individuals.</p>
+                <p>Platform screen doors in stations are one way the Metropolitan Transportation Authority (MTA) could provide a safer environment 
+                for transit users. The MTA has recently announced a pilot of platform screen doors in three stations.</p>
+                <p>Platform screen doors are automatic doors installed between the rails and platforms so that there is limited to no access to the rail.</p>
+            </div>
         </div>
-        <!--Information section one content-->
-        <div class="item">
-            <p>The danger extends beyond deliberate acts of violence; injuries and deaths also occur when people try to pick up items that have fallen 
-            on the tracks, get caught and dragged by a moving train, or descend to the tracks to help other individuals.</p>
-            <p>Platform screen doors in stations are one way the Metropolitan Transportation Authority (MTA) could provide a safer environment 
-            for transit users. The MTA has recently announced a pilot of platform screen doors in three stations.</p>
-            <p>Platform screen doors are automatic doors installed between the rails and platforms so that there is limited to no access to the rail.</p>
-        </div>
-    </div>
-    <!--Information section two-->
-    <div class="info">
-        <!--Information section two heading: Platform Screen Doors-->
-        <div class="heading">
-            <p>Platform Screen Doors</p>
-        </div>
-        <!--Information section two content-->
-        <div class="item">
-            <p>Platform Screen Doors (PSD) are full-height automatic doors that are fully-fitted to the ceiling. They protect riders from piston
-            effects (Rapid winds that occur when the train is approaching).</p>
-            <p>Platform Edge Doors (PED) are like PSDs, but do not reach all the way to the ceiling.</p>
-            <p>Automatic Platform Gates (APGs) are shorter than PEDs and are half-height.</p>
-            <p>Rope Platform Screen Doors (RPSDs) are a newer type of screen door that slide open vertically. Some operate like garage doors, allowing 
-            more flexibility in stopping points for the train.</p>
+        <!--Information section two-->
+        <div class="info">
+            <!--Information section two heading: Platform Screen Doors-->
+            <div class="heading">
+                <p>Platform Screen Doors</p>
+            </div>
+            <!--Information section two content-->
+            <div class="item">
+                <p>Platform Screen Doors (PSD) are full-height automatic doors that are fully-fitted to the ceiling. They protect riders from piston
+                effects (Rapid winds that occur when the train is approaching).</p>
+                <p>Platform Edge Doors (PED) are like PSDs, but do not reach all the way to the ceiling.</p>
+                <p>Automatic Platform Gates (APGs) are shorter than PEDs and are half-height.</p>
+                <p>Rope Platform Screen Doors (RPSDs) are a newer type of screen door that slide open vertically. Some operate like garage doors, allowing 
+                more flexibility in stopping points for the train.</p>
+            </div>
         </div>
     </div>
     <!--Information section three-->
@@ -70,18 +73,18 @@
             <p>The real estate on these doors can offer a financial benefit through the placement of advertising, or assist with wayfinding.</p>
         </div>
     </div>
+    <!--Images of platform screen doors-->
+    <div class="gallery">
+        <img src="/images/Platform_Screen_Doors_Barcelona.jpg" alt="Platform Screen Doors" id="gallery">
+        <img src="/images/Platform_Screen_Doors_Daegu.jpg" alt="Platform Screen Doors" id="gallery">
+        <img src="/images/Platform_Screen_Doors_Delhi.jpg" alt="Platform Screen Doors" id="gallery">
+        <img src="/images/Platform_Screen_Doors_Seoul.jpg" alt="Platform Screen Doors" id="gallery">
+    </div>
     <!--Music-->
     <div>
         <audio controls autoplay loop>
-            <source src="/Train_Systems/audio/044. Winter Horns.mp3" type="audio/mpeg">
+            <source src="/audio/044. Winter Horns.mp3" type="audio/mpeg">
         </audio>
-    </div>
-    <!--Images of platform screen doors-->
-    <div>
-        <img src="/Train_Systems/images/Platform_Screen_Doors_Barcelona.jpg" alt="Platform Screen Doors">
-        <img src="/Train_Systems/images/Platform_Screen_Doors_Daegu.jpg" alt="Platform Screen Doors">
-        <img src="/Train_Systems/images/Platform_Screen_Doors_Delhi.jpg" alt="Platform Screen Doors">
-        <img src="/Train_Systems/images/Platform_Screen_Doors_Seoul.jpg" alt="Platform Screen Doors">
     </div>
     <!--Footer: Copyright-->
     <footer>
