--- a/code.html
+++ b/code.html
@@ -24,7 +24,7 @@
     </nav>
     <!--Image of large type subway map-->
     <div>
-        <img src="/Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
+        <img src="/images/Large_Type_Subway_Map.png" alt="MTA Maps">
     </div>
     <!--Information section one-->
     <div class="info">
@@ -41,7 +41,7 @@
     <!--Music-->
     <div>
         <audio controls autoplay loop>
-            <source src="/Train_Systems/audio/4-07 Frosty Fruits [In a Snow-Bound Land Returns].mp3" type="audio/mpeg">
+            <source src="/audio/4-07 Frosty Fruits [In a Snow-Bound Land Returns].mp3" type="audio/mpeg">
         </audio>
     </div>
     <!--Footer: Copyright-->
