--- a/index.html
+++ b/index.html
@@ -24,34 +24,36 @@
     </nav>
     <!--Image of large type subway map-->
     <div>
-        <img src="/Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
+        <img src="/images/Large_Type_Subway_Map.png" alt="MTA Maps">
     </div>
-    <!--Information section one-->
-    <div class="info">
-        <!--Information section one heading: Facts-->
-        <div class="heading">
-            <p>Facts</p>
+    <div class="section">
+        <!--Information section one-->
+        <div class="info">
+            <!--Information section one heading: Facts-->
+            <div class="heading">
+                <p>Facts</p>
+            </div>
+            <!--Information section one content-->
+            <div class="item">
+                <p>The New York City Transit is the largest and most active subway system in North America.</p>
+                <p>The New York City Transit is maintained by the Metropolitan Transportation Authority (MTA).</p>
+                <p>The standard subway fare is $2.75.</p>
+                <p>Commuters can use a MetroCard or OMNY, the MTA's contactless fare payment system, to pay the subway fare.</p>
+            </div>
         </div>
-        <!--Information section one content-->
-        <div class="item">
-            <p>The New York City Transit is the largest and most active subway system in North America.</p>
-            <p>The New York City Transit is maintained by the Metropolitan Transportation Authority (MTA).</p>
-            <p>The standard subway fare is $2.75.</p>
-            <p>Commuters can use a MetroCard or OMNY, the MTA's contactless fare payment system, to pay the subway fare.</p>
-        </div>
-    </div>
-    <!--Information section two-->
-    <div class="info">
-        <!--Information section two heading: Problems-->
-        <div class="heading">
-            <p>Problems</p>
-        </div>
-        <!--Information section two content-->
-        <div class="item">
-            <p>The Metropolitan Transportation Authority (MTA) uses 12-9s to describe collisions between trains and commuters. 
-            The experience can be traumatizing for train operators and a large number of 12-9s are actually suicides or accidents.</p>
-            <p>Subway safety is an election issue for the year 2022. Violent crimes include shootings, stabbings, and shoving people onto the tracks.
-            Other crimes include felony crimes.</p>
+        <!--Information section two-->
+        <div class="info">
+            <!--Information section two heading: Problems-->
+            <div class="heading">
+                <p>Problems</p>
+            </div>
+            <!--Information section two content-->
+            <div class="item">
+                <p>The Metropolitan Transportation Authority (MTA) uses 12-9s to describe collisions between trains and commuters. 
+                The experience can be traumatizing for train operators and a large number of 12-9s are actually suicides or accidents.</p>
+                <p>Subway safety is an election issue for the year 2022. Violent crimes include shootings, stabbings, and shoving people onto the tracks.
+                Other crimes include felony crimes.</p>
+            </div>
         </div>
     </div>
     <!--Information section three-->
@@ -66,22 +68,22 @@
                 <tr>
                     <!--Image of M train-->
                     <th>M Train</th>
-                    <td><img src="/Train_Systems/images/M_Train.png" alt="Trains"></td>
+                    <td><img src="/images/M_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
                     <!--Image of E train-->
                     <th>E Train</th>
-                    <td><img src="/Train_Systems/images/E_Train.png" alt="Trains"></td>
+                    <td><img src="/images/E_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
                     <!--Image of 7 train-->
                     <th>7 Train</th>
-                    <td><img src="/Train_Systems/images/7_Train.png" alt="Trains"></td>
+                    <td><img src="/images/7_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
                     <!--Image of G train-->
                     <th>G Train</th>
-                    <td><img src="/Train_Systems/images/G_Train.png" alt="Trains"></td>
+                    <td><img src="/images/G_Train.png" alt="Trains"></td>
                 </tr>
             </table>
         </div>
@@ -104,7 +106,7 @@
     <!--Music-->
     <div>
         <audio controls autoplay loop>
-            <source src="/Train_Systems/audio/4-04 Fruity Factory.mp3" type="audio/mpeg">
+            <source src="/audio/4-04 Fruity Factory.mp3" type="audio/mpeg">
         </audio>
     </div>
     <!--Footer: Copyright-->
