--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <!--Image of large type subway map-->
     <div>
-        <img src="/images/Large_Type_Subway_Map.png" alt="MTA Maps">
+        <img src="/Train_Systems/images/Large_Type_Subway_Map.png" alt="MTA Maps">
     </div>
     <div class="section">
         <!--Information section one-->
@@ -68,22 +68,22 @@
                 <tr>
                     <!--Image of M train-->
                     <th>M Train</th>
-                    <td><img src="/images/M_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems//images/M_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
                     <!--Image of E train-->
                     <th>E Train</th>
-                    <td><img src="/images/E_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems//images/E_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
                     <!--Image of 7 train-->
                     <th>7 Train</th>
-                    <td><img src="/images/7_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems//images/7_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
                     <!--Image of G train-->
                     <th>G Train</th>
-                    <td><img src="/images/G_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems//images/G_Train.png" alt="Trains"></td>
                 </tr>
             </table>
         </div>
