--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
                 <tr>
                     <!--Image of M train-->
                     <th>M Train</th>
-                    <td><img src="/Train_Systems//images/M_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems/images/M_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
                     <!--Image of E train-->
                     <th>E Train</th>
-                    <td><img src="/Train_Systems//images/E_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems/images/E_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
                     <!--Image of 7 train-->
                     <th>7 Train</th>
-                    <td><img src="/Train_Systems//images/7_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems/images/7_Train.png" alt="Trains"></td>
                 </tr>
                 <tr>
                     <!--Image of G train-->
                     <th>G Train</th>
-                    <td><img src="/Train_Systems//images/G_Train.png" alt="Trains"></td>
+                    <td><img src="/Train_Systems/images/G_Train.png" alt="Trains"></td>
                 </tr>
             </table>
         </div>
@@ -106,7 +106,7 @@
     <!--Music-->
     <div>
         <audio controls autoplay loop>
-            <source src="/audio/4-04 Fruity Factory.mp3" type="audio/mpeg">
+            <source src="/Train_Systems/audio/4-04 Fruity Factory.mp3" type="audio/mpeg">
         </audio>
     </div>
     <!--Footer: Copyright-->
