--- a/solve.html
+++ b/solve.html
@@ -75,15 +75,15 @@
     </div>
     <!--Images of platform screen doors-->
     <div class="gallery">
-        <img src="/images/Platform_Screen_Doors_Barcelona.jpg" alt="Platform Screen Doors" id="gallery">
-        <img src="/images/Platform_Screen_Doors_Daegu.jpg" alt="Platform Screen Doors" id="gallery">
-        <img src="/images/Platform_Screen_Doors_Delhi.jpg" alt="Platform Screen Doors" id="gallery">
-        <img src="/images/Platform_Screen_Doors_Seoul.jpg" alt="Platform Screen Doors" id="gallery">
+        <img src="/Train_Systems/images/Platform_Screen_Doors_Barcelona.jpg" alt="Platform Screen Doors" id="gallery">
+        <img src="/Train_Systems/images/Platform_Screen_Doors_Daegu.jpg" alt="Platform Screen Doors" id="gallery">
+        <img src="/Train_Systems/images/Platform_Screen_Doors_Delhi.jpg" alt="Platform Screen Doors" id="gallery">
+        <img src="/Train_Systems/images/Platform_Screen_Doors_Seoul.jpg" alt="Platform Screen Doors" id="gallery">
     </div>
     <!--Music-->
     <div>
         <audio controls autoplay loop>
-            <source src="/audio/044. Winter Horns.mp3" type="audio/mpeg">
+            <source src="/Train_Systems/audio/044. Winter Horns.mp3" type="audio/mpeg">
         </audio>
     </div>
     <!--Footer: Copyright-->
