--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
         </div>
         <!--Travel time form-->
         <div class="item">
-            <form>
+            <form action="#">
                 <label for="time">What is your average travel time using the New York City Subway?</label>
                 <input type="text" id="time" name="time">
-                <button>Save</button>
+                <input type="submit" value="Submit">
             </form>
         </div>
     </div>
