--- a/safe.html
+++ b/safe.html
@@ -38,6 +38,10 @@
             Other crimes include felony crimes.</p>
         </div>
     </div>
+    <!--Video of Subway Platform Safety-->
+    <div>
+        <iframe src="https://www.youtube.com/embed/tj3RG3_cdaE"></iframe>
+    </div>
     <!--Music-->
     <div>
         <audio controls autoplay loop>
