--- a/safe.html
+++ b/safe.html
@@ -40,7 +40,7 @@
     </div>
     <!--Video of Subway Platform Safety-->
     <div>
-        <iframe src="https://www.youtube.com/embed/tj3RG3_cdaE"></iframe>
+        <iframe src="https://www.youtube.com/watch?v=tj3RG3_cdaE"></iframe>
     </div>
     <!--Music-->
     <div>
