--- a/safe.html
+++ b/safe.html
@@ -39,8 +39,13 @@
         </div>
     </div>
     <!--Video of Subway Platform Safety-->
-    <div>
-        <iframe src="https://www.youtube.com/watch?v=tj3RG3_cdaE"></iframe>
+    <div class="info">
+        <div class="heading">
+            <p>Subway Platform Safety</p>
+        </div>
+        <video controls>
+            <source src="/video/Subway_Platform_Safety.mp4" type="video/mp4">
+        </video>
     </div>
     <!--Music-->
     <div>
