--- a/code.html
+++ b/code.html
@@ -34,8 +34,10 @@
         </div>
         <!--Information section one content-->
         <div class="item">
-            <p>The Metropolitan Transportation Authority (MTA) uses 12-9s to describe collisions between trains and commuters. 
-            The experience can be traumatizing for train operators and a large number of 12-9s are actually suicides or accidents.</p>
+            <p>The Metropolitan Transportation Authority (MTA) uses 12-9s to describe collisions between trains and commuters.</p>
+            <p>The experience can be traumatizing for train operators and a large number of 12-9s are actually suicides or accidents.</p>
+            <p>More than half of the deaths were ruled suicides and more than a third were accidents.</p>
+            <p>In the absence of physical barriers, fast-moving subway cars often come within inches of waiting passengers.</p>
         </div>
     </div>
     <!--Music-->
